deploy/kubernetes/local/04-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-fyc-api
  namespace: demo-fyc
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: demo-fyc-api
  template:
    metadata:
      labels:
        app: demo-fyc-api
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: api
          image: demo-fyc-api:2.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3333
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: demo-fyc-api
  namespace: demo-fyc
spec:
  selector:
    app: demo-fyc-api
  ports:
    - name: http
      port: 3333
      targetPort: http
  type: ClusterIP
